(2001/10/30 - petrs)   Added Joe Steffen to author's list as the creator.
(2001/10/19 - broeker) Replace usages of freopen() by fclose()/fopen() pairs
		       to work around bug in some Linux libc constellation.
(2001/10/10 - broeker) Remove unused argument 'name' of addsrcfile() function.
	               Alternative buffer overflow protection scheme, using
		       "%.*s" format specifiers in ordinary sprintf(); now used
		       throughout dir.c.
(2001/10/09 - valentin) Prevention of a possible buffer overflow.
(2001/09/27 - broeker) Added autoconf test to use Cygwin's separate
                       -lregex. The regcomp() in libc is not what we want.
(2001/09/13 - broeker) Move chunk for malformed CPP directives further down, so
	               it won't incorrectly eat up #else or #endif directives.
		       Fixes bug #460345.
(2001/08/27 - broeker) Add C++-style comments to {comment} pattern. Fixes
	               bug #455441: C++ comments in the middle of a function 
		       definition caused it not be recognized.
(2001/08/15 - broeker) Zero out 'disprefs' whenever the count of references, 
	               'totallines' is set to zero. This makes sure that you 
		       can't <Tab> into the selection area if there's nothing 
		       in it.
(2001/08/13 - jcduell) Revisited inverted index file name fixup routines.
                       (Patch #444669 from SourceForge).
(2001/08/03 - broeker) Use %option noyywrap in fscanner.l to avoid problems
	               with broken flex installations that can't find -lfl. 
(2001/07/12 - dixon)   Updated INSTALL with new configure info for HP-UX.
(2001/07/11 - broeker) Fixed #if syntax glitch in cohrs' SUNOS change.
(2001/07/09 - petrs)   Substituted lstat() for stat() to prevent core
                       dumps on looping symbolic references.
(2001/07/06 - broeker) Code dealing with database creation ripped out of
		       main.c and moved to a new module build.c. New
		       header file build.h to go with it.